tests/kubernetes/custom-3.1.2/compliant/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: compliant-node
  annotations:
    kubelet.kubeconfig.owner: "root:root"
